--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Fashion Landing Page Concept</title>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
+      <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Charm:700" rel="stylesheet">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
@@ -33,7 +34,7 @@
 
                   <li>
                         <div class="logo">
-                              <span>glamorous</span>
+                              <span>fashionable</span>
                         </div>
                   </li>
 
